--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,19 +61,23 @@ dependencies {
     def retrofit_gson_version = "2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_gson_version"
 
+    def okhttp_version = "4.10.0"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+
+    def okhttp_logging_interceptor_version = "4.10.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logging_interceptor_version"
+
     def coil_version = "2.3.0"
     implementation "io.coil-kt:coil:$coil_version"
 
     def swipe_refresh_layout_version = "1.1.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_layout_version"
 
-    def shimmer_version = "0.5.0"
-    implementation "com.facebook.shimmer:shimmer:$shimmer_version"
-
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
