--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:name=".WeatherWise"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:foregroundServiceType="location"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
