--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.WeatherWise"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.weather.screens.WeatherActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
