--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,15 +41,15 @@ android {
 }
 
 dependencies {
-    def navigation_version = "2.5.3"
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
-
-    def data_store_version = "1.0.0-alpha04"
+    def data_store_version = "1.0.0"
     implementation "androidx.datastore:datastore-preferences:$data_store_version"
 
     def lifecycle_version = "2.6.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    def activity_version = "1.7.1"
+    implementation "androidx.activity:activity-ktx:$activity_version"
 
     def dagger_hilt_version = "2.44"
     implementation "com.google.dagger:hilt-android:$dagger_hilt_version"
